src/test/ui/parser/extern-no-fn.stderr
error: missing `fn`, `type`, or `static` for extern-item declaration
  --> $DIR/extern-no-fn.rs:1:9
   |
LL |   extern {
   |  _________^
LL | |     f();
   | |____^ missing `fn`, `type`, or `static`

error: aborting due to previous error

