src/test/ui/parser/extern-no-fn.rs
extern { //~ ERROR missing `fn`, `type`, or `static` for extern-item declaration
    f();
}

fn main() {
}
